packages/ui/form/src/index.less
@osui-form-class-prefix: osui-form;

.@{osui-form-class-prefix} {
    .ant-form-item-explain {
        font-size: 12px;

        [role="alert"] {
            display: flex;
            align-items: center;
        }
    }

    .ant-form-item-has-error .ant-form-item-explain {
        div::before {
            display: var(--form-item-explain-icon-display);
            width: 16px;
            height: 16px;
            content: '';
            -webkit-mask: url('./error.svg') no-repeat 50% 50%;
            mask: url('./error.svg') no-repeat 50% 50%;
            -webkit-mask-size: cover;
            mask-size: cover;
            background-color: var(--theme-error-color);
            vertical-align: middle;
            margin-right: 2px;
        }
    }

    .ant-form-item-has-warning .ant-form-item-explain {
        div::before {
            display: var(--form-item-explain-icon-display);
            width: 16px;
            height: 16px;
            content: '';
            -webkit-mask: url('./warning.svg') no-repeat 50% 50%;
            mask: url('./warning.svg') no-repeat 50% 50%;
            -webkit-mask-size: cover;
            mask-size: cover;
            background-color: var(--theme-warning-color);
            vertical-align: middle;
            margin-right: 2px;
        }
    }

    .ant-form-item-is-validating .ant-form-item-explain {
        div::before {
            display: var(--form-item-explain-icon-display);
            width: 16px;
            height: 16px;
            content: '';
            -webkit-mask: url('./spinner.svg') no-repeat 50% 50%;
            mask: url('./spinner.svg') no-repeat 50% 50%;
            -webkit-mask-size: cover;
            mask-size: cover;
            background-color: var(--theme-text-color);
            vertical-align: middle;
            margin-right: 2px;
            animation: osui-icon-spin 1s infinite linear;
        }
    }
    // status
    .ant-form-item-has-error {
        .ant-input:focus,
        .ant-input-affix-wrapper:focus,
        .ant-input-focused,
        .ant-input-affix-wrapper-focused {
            background: var(--input-error-focus-background-color);

            input.ant-input {
                background: var(--input-error-focus-background-color);
            }
        }
    }

    .ant-form-item-has-warning {
        .ant-input:focus,
        .ant-input-affix-wrapper:focus,
        .ant-input-focused,
        .ant-input-affix-wrapper-focused {
            background: var(--input-warning-focus-background-color);

            input.ant-input {
                background: var(--input-warning-focus-background-color);
            }
        }
    }

    .ant-form-item-extra {
        color: var(--theme-placeholder-color);
        margin-top: 6px;
        font-size: 12px;
    }

    &-validate-message-inline {
        &.ant-form-item-with-help {
            margin-bottom: @form-item-margin-bottom;
        }

        .ant-form-item-explain {
            position: absolute;
            left: 100%;
            padding-left: 10px;
            bottom: 4px;
            width: 50%;
            max-width: 200px;
        }
    }

    &-validate-message-has-hint {
        .ant-form-item-explain {
            top: 6px;
        }
    }

    .ant-form-item-label {
        label {
            width: 100%;
        }
    }
}

@keyframes osui-icon-spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

